--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -82,3 +82,18 @@ a:hover {
   background-color: #ccc;
 }
 
+.home__filters {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.home__filters label {
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.home__filters select {
+  padding: 8px;
+  font-size: 16px;
+  border-radius: 5px;
+}
